--- a/config/crd/bases/cluster.x-k8s.io_machines.yaml
+++ b/config/crd/bases/cluster.x-k8s.io_machines.yaml
@@ -1028,30 +1028,33 @@ spec:
                 type: string
               readinessGates:
                 description: |-
-                  readinessGates specifies additional conditions to include when evaluating Machine readiness.
-                  A Machine is ready when `BootstrapConfigReady`, `InfrastructureReady`, `NodeHealthy` and `HealthCheckSucceeded` (if present) are "True";
-                  if other conditions are defined in this field, those conditions should be "True" as well for the Machine to be ready.
+                  readinessGates specifies additional conditions to include when evaluating Machine Ready condition.
 
-                  This field can be used e.g.
-                  - By Cluster API control plane providers to extend the semantic of the Ready condition for the Machine they
-                    control, like the kubeadm control provider adding ReadinessGates for the APIServerPodHealthy, SchedulerPodHealthy conditions, etc.
-                  - By external controllers, e.g. responsible to install special software/hardware on the Machines
-                    to include the status of those components into ReadinessGates (by surfacing new conditions on Machines and
-                    adding them to ReadinessGates).
+                  This field can be used e.g. by Cluster API control plane providers to extend the semantic of the
+                  Ready condition for the Machine they control, like the kubeadm control provider adding ReadinessGates
+                  for the APIServerPodHealthy, SchedulerPodHealthy conditions, etc.
 
-                  NOTE: this field will be considered only for computing v1beta2 conditions.
+                  Another example are external controllers, e.g. responsible to install special software/hardware on the Machines;
+                  they can include the status of those components with a new condition and add this condition to ReadinessGates.
+
+                  NOTE: this field is considered only for computing v1beta2 conditions.
                 items:
                   description: MachineReadinessGate contains the type of a Machine
                     condition to be used as a readiness gate.
                   properties:
                     conditionType:
                       description: |-
-                        conditionType refers to a condition with matching type in the Machine's condition list.
+                        conditionType refers to a positive polarity condition (status true means good) with matching type in the Machine's condition list.
+                        If the conditions doesn't exist, it will be treated as unknown.
                         Note: Both Cluster API conditions or conditions added by 3rd party controllers can be used as readiness gates.
+                      maxLength: 316
+                      minLength: 1
+                      pattern: ^([a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*/)?(([A-Za-z0-9][-A-Za-z0-9_.]*)?[A-Za-z0-9])$
                       type: string
                   required:
                   - conditionType
                   type: object
+                maxItems: 32
                 type: array
                 x-kubernetes-list-map-keys:
                 - conditionType
@@ -1322,19 +1325,17 @@ spec:
                   E.g. Pending, Running, Terminating, Failed etc.
                 type: string
               v1beta2:
-                description: |-
-                  Groups all the fields that will be added or modified in Machine's status with the V1Beta2 version.
-                  v1beta2 groups all the fields that will be added or modified in Machine's status with the V1Beta2 version.
+                description: v1beta2 groups all the fields that will be added or modified
+                  in Machine's status with the V1Beta2 version.
                 properties:
                   conditions:
                     description: |-
                       conditions represents the observations of a Machine's current state.
                       Known condition types are Available, Ready, UpToDate, BootstrapConfigReady, InfrastructureReady, NodeReady,
                       NodeHealthy, Deleting, Paused.
-                      Additional conditions are also added in specific cases:
-                      - HealthCheckSucceeded, OwnerRemediated if a MachineHealthCheck is targeting this machine.
-                      - APIServerPodHealthy, ControllerManagerPodHealthy, SchedulerPodHealthy, EtcdPodHealthy, EtcdMemberHealthy if
-                        the machine is part of a KubeadmControlPlane instance.
+                      If a MachineHealthCheck is targeting this machine, also HealthCheckSucceeded, OwnerRemediated conditions are added.
+                      Additionally control plane Machines controlled by KubeadmControlPlane will have following additional conditions:
+                      APIServerPodHealthy, ControllerManagerPodHealthy, SchedulerPodHealthy, EtcdPodHealthy, EtcdMemberHealthy.
                     items:
                       description: Condition contains details for one aspect of the
                         current state of this API Resource.
