--- a/test/infrastructure/inmemory/config/crd/bases/infrastructure.cluster.x-k8s.io_inmemoryclusters.yaml
+++ b/test/infrastructure/inmemory/config/crd/bases/infrastructure.cluster.x-k8s.io_inmemoryclusters.yaml
@@ -121,7 +121,7 @@ spec:
                 type: boolean
               v1beta2:
                 description: v1beta2 groups all the fields that will be added or modified
-                  in MachineSet's status with the InMemoryCluster version.
+                  in InMemoryCluster's status with the V1Beta2 version.
                 properties:
                   conditions:
                     description: conditions represents the observations of a InMemoryCluster's
