--- a/test/infrastructure/inmemory/config/crd/bases/infrastructure.cluster.x-k8s.io_inmemorymachines.yaml
+++ b/test/infrastructure/inmemory/config/crd/bases/infrastructure.cluster.x-k8s.io_inmemorymachines.yaml
@@ -218,7 +218,7 @@ spec:
                 type: boolean
               v1beta2:
                 description: v1beta2 groups all the fields that will be added or modified
-                  in MachineSet's status with the InMemoryMachine version.
+                  in InMemoryMachine's status with the V1Beta2 version.
                 properties:
                   conditions:
                     description: conditions represents the observations of a InMemoryMachine's
