Add maxItems to all condition fields
Signed-off-by: Stefan Büringer buringerst@vmware.com

--- a/internal/test/builder/crd/test.cluster.x-k8s.io_phase2obj.yaml
+++ b/internal/test/builder/crd/test.cluster.x-k8s.io_phase2obj.yaml
@@ -105,6 +105,7 @@ spec:
                   - status
                   - type
                   type: object
+                maxItems: 32
                 type: array
                 x-kubernetes-list-map-keys:
                 - type
