--- a/internal/test/builder/crd/test.cluster.x-k8s.io_phase1obj.yaml
+++ b/internal/test/builder/crd/test.cluster.x-k8s.io_phase1obj.yaml
@@ -156,6 +156,7 @@ spec:
                       - status
                       - type
                       type: object
+                    maxItems: 32
                     type: array
                     x-kubernetes-list-map-keys:
                     - type
