add basic validation for time duration
Basic validation for time duration can be done using kubebuilder markers
to match the pattern "^(([1-9][0-9]*(\\.[0-9]+)?|0?\\.[0-9]+)(ns|us|µs|ms|s|m|h))+$",

Signed-off-by: Dhairya Arora <dhairya.arora@syself.com>

--- a/config/crd/bases/cluster.x-k8s.io_clusters.yaml
+++ b/config/crd/bases/cluster.x-k8s.io_clusters.yaml
@@ -1086,17 +1086,20 @@ spec:
                           NodeDeletionTimeout defines how long the controller will attempt to delete the Node that the Machine
                           hosts after the Machine is marked for deletion. A duration of 0 will retry deletion indefinitely.
                           Defaults to 10 seconds.
+                        pattern: ^(([1-9][0-9]*(\.[0-9]+)?|0?\.[0-9]+)(ns|us|µs|ms|s|m|h))+$
                         type: string
                       nodeDrainTimeout:
                         description: |-
                           NodeDrainTimeout is the total amount of time that the controller will spend on draining a node.
                           The default value is 0, meaning that the node can be drained without any time limitations.
                           NOTE: NodeDrainTimeout is different from `kubectl drain --timeout`
+                        pattern: ^(([1-9][0-9]*(\.[0-9]+)?|0?\.[0-9]+)(ns|us|µs|ms|s|m|h))+$
                         type: string
                       nodeVolumeDetachTimeout:
                         description: |-
                           NodeVolumeDetachTimeout is the total amount of time that the controller will spend on waiting for all volumes
                           to be detached. The default value is 0, meaning that the volumes can be detached without any time limitations.
+                        pattern: ^(([1-9][0-9]*(\.[0-9]+)?|0?\.[0-9]+)(ns|us|µs|ms|s|m|h))+$
                         type: string
                       replicas:
                         description: |-
@@ -1387,17 +1390,20 @@ spec:
                                 NodeDeletionTimeout defines how long the controller will attempt to delete the Node that the Machine
                                 hosts after the Machine is marked for deletion. A duration of 0 will retry deletion indefinitely.
                                 Defaults to 10 seconds.
+                              pattern: ^(([1-9][0-9]*(\.[0-9]+)?|0?\.[0-9]+)(ns|us|µs|ms|s|m|h))+$
                               type: string
                             nodeDrainTimeout:
                               description: |-
                                 NodeDrainTimeout is the total amount of time that the controller will spend on draining a node.
                                 The default value is 0, meaning that the node can be drained without any time limitations.
                                 NOTE: NodeDrainTimeout is different from `kubectl drain --timeout`
+                              pattern: ^(([1-9][0-9]*(\.[0-9]+)?|0?\.[0-9]+)(ns|us|µs|ms|s|m|h))+$
                               type: string
                             nodeVolumeDetachTimeout:
                               description: |-
                                 NodeVolumeDetachTimeout is the total amount of time that the controller will spend on waiting for all volumes
                                 to be detached. The default value is 0, meaning that the volumes can be detached without any time limitations.
+                              pattern: ^(([1-9][0-9]*(\.[0-9]+)?|0?\.[0-9]+)(ns|us|µs|ms|s|m|h))+$
                               type: string
                             replicas:
                               description: |-
@@ -1613,17 +1619,20 @@ spec:
                                 NodeDeletionTimeout defines how long the controller will attempt to delete the Node that the MachinePool
                                 hosts after the MachinePool is marked for deletion. A duration of 0 will retry deletion indefinitely.
                                 Defaults to 10 seconds.
+                              pattern: ^(([1-9][0-9]*(\.[0-9]+)?|0?\.[0-9]+)(ns|us|µs|ms|s|m|h))+$
                               type: string
                             nodeDrainTimeout:
                               description: |-
                                 NodeDrainTimeout is the total amount of time that the controller will spend on draining a node.
                                 The default value is 0, meaning that the node can be drained without any time limitations.
                                 NOTE: NodeDrainTimeout is different from `kubectl drain --timeout`
+                              pattern: ^(([1-9][0-9]*(\.[0-9]+)?|0?\.[0-9]+)(ns|us|µs|ms|s|m|h))+$
                               type: string
                             nodeVolumeDetachTimeout:
                               description: |-
                                 NodeVolumeDetachTimeout is the total amount of time that the controller will spend on waiting for all volumes
                                 to be detached. The default value is 0, meaning that the volumes can be detached without any time limitations.
+                              pattern: ^(([1-9][0-9]*(\.[0-9]+)?|0?\.[0-9]+)(ns|us|µs|ms|s|m|h))+$
                               type: string
                             replicas:
                               description: |-
